--- a/Project.html
+++ b/Project.html
@@ -2,11 +2,14 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-			<title>Project</title>
-			<link rel="stylesheet" type="text/css" href="css1.css" />
+		<title>Project</title>
+		<link rel="stylesheet" type="text/css" href="prj_stl.css" />
 	</head>
-	<body background="Eikones\Eikona1.jpg">
-		<div class="wrapper"><a target="_blank" href="Arxiki.html" class="button">Αρχική</a><a href="#" class="button">Project</a><a target="_blank" href="Biografiko.html" class="button">Βιογραφικό</a><a target="_blank" href="Epikoinwnia.html" class="button">Επικοινωνία</a></div>
-		
+	<body>
+		<header>
+			<h1 align="center">Project</h1>
+		</header>
+	
+	
 	</body>
 </html>
