--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -30,8 +30,8 @@
 		Γλώσσες Προγραμματισμού: Java, C++, HTML και Python
 		</h3>
 		<p class="aligncenter">
-		<a href="https://buk.gr/el/poli-perioxi/perithori"> <img align="middle" src="Eikones/Perithori.jpg"> </a>
-		<a href="https://en.wikipedia.org/wiki/Alexandroupoli"> <img align="middle" src="Eikones/alexandroupoli.jpg"> </a>
+		<a href="https://buk.gr/el/poli-perioxi/perithori" target="_blank"> <img align="middle" src="Eikones/Perithori.jpg"> </a>
+		<a href="https://en.wikipedia.org/wiki/Alexandroupoli" target="_blank"> <img align="middle" src="Eikones/alexandroupoli.jpg"> </a>
 		</p>
 	</body>
 </html>
