--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -8,7 +8,7 @@
 	<body background="Eikones\Eikona1.jpg">
 		<ul>
 			<li><a class="active" href="#">Αρχική</a></li>
-			<li><a target="_blank" href="Project1.html">Project</a></li>
+			<li><a target="_blank" href="Project.html">Project</a></li>
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
