--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -21,12 +21,12 @@
 		<br>
 		<h2>Κεσίδης Αλέξανδρος:</h2>
 		<h3>
-		Τόπος καταγωγής:Δράμα, Περιθώρι 
+		Τόπος καταγωγής:Δράμα, Περιθώρι <br>
 		Γλώσσες Προγραμματισμού: Java, C++, Pascal, HTML, Python και PHP
 		</h3>
 		<h2>Γλήνιας Γεώργιος</h2>
 		<h3>
-		Τόπος Καταγωγής: Αλεξανδρούπολη
+		Τόπος Καταγωγής: Αλεξανδρούπολη <br>
 		Γλώσσες Προγραμματισμού: Java, C++, HTML και Python
 		</h3>
 		<p class="aligncenter">
