--- a/Biografiko1.html
+++ b/Biografiko1.html
@@ -8,7 +8,7 @@
 	<body background="Eikones\Eikona1.jpg">
 		<ul>
 			<li><a target="_blank" class="active" href="Arxiki1.html">Αρχική</a></li>
-			<li><a target="_blank" href="Project1.html">Project</a></li>
+			<li><a target="_blank" href="Project.html">Project</a></li>
 			<li><a target="_blank" href="#">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
