--- a/Epikoinwnia1.html
+++ b/Epikoinwnia1.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 			<title>Επικοινωνία</title>
-			<link rel="stylesheet" type="text/css" href="CssTest.css" />
+			<link rel="stylesheet" type="text/css" href="Epikoinwnia1.css" />
 	</head>
 	<body background="Eikones\Eikona1.jpg">
 		<ul>
 			<li><a target="_blank" class="active" href="Arxiki1.html">Αρχική</a></li>
-			<li><a target="_blank" href="Project1.html">Project</a></li>
+			<li><a target="_blank" href="Project.html">Project</a></li>
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
