--- a/Project.html
+++ b/Project.html
@@ -9,7 +9,12 @@
 		<header>
 			<h1 align="center">Project</h1>
 		</header>
-	
+		<ul>
+			<li><a target="_blank" class="active" href="Arxiki1.html">Αρχική</a></li>
+			<li><a target="_blank" href="Project.html">Project</a></li>
+			<li><a target="_blank" href="#">Βιογραφικό</a></li>
+			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
+		</ul>
 	
 	</body>
 </html>
