--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -6,6 +6,9 @@
 			<link rel="stylesheet" type="text/css" href="CssTest.css" />
 	</head>
 	<body background="Eikones\Eikona1.jpg">
+		<header>
+			<h1 align="center">Αρχική</h1>
+		</header>
 		<ul>
 			<li><a class="active" href="#">Αρχική</a></li>
 			<li><a target="_blank" href="Project.html">Project</a></li>
