--- a/Epikoinwnia1.html
+++ b/Epikoinwnia1.html
@@ -6,6 +6,9 @@
 			<link rel="stylesheet" type="text/css" href="Epikoinwnia1.css" />
 	</head>
 	<body background="Eikones\Eikona1.jpg">
+		<header>
+			<h1 align="center">Επικοινωνία</h1>
+		</header>
 		<ul>
 			<li><a target="_blank" class="active" href="Arxiki1.html">Αρχική</a></li>
 			<li><a target="_blank" href="Project.html">Project</a></li>
