--- a/Epikoinwnia1.html
+++ b/Epikoinwnia1.html
@@ -15,8 +15,8 @@
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
-		
-		<form action="/my-handling-form-page" method="post">
+		<div class="position1">
+		<form action="mailto:alkesid@teiemt.gr"  method="post">
 			<div>
 				<label for="name">Name:</label>
 				<input type="text" id="name" name="user_name">
@@ -32,6 +32,7 @@
 			<div class="button1">
 				<button type="submit">Send your message</button>
 			</div>
+		</div>
 		</form>
 	</body>
 </html>
