--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -22,16 +22,20 @@
 		<br>2)Γλήνιας Γεώργιος 4136
 		</h3>
 		<br>
+		<img align="right" src="Eikones/AK.jpg" alt="Alexandros Kesidis" style="width:130px;height:130px;">
 		<h2>Κεσίδης Αλέξανδρος:</h2>
 		<h3>
 		Τόπος καταγωγής:Δράμα, Περιθώρι <br>
 		Γλώσσες Προγραμματισμού: Java, C++, Pascal, HTML, Python και PHP
 		</h3>
+		<br>
+		<img align="right" src="Eikones/GG.jpg" alt="Giwrgos Glinias" style="width:130px;height:130px;">
 		<h2>Γλήνιας Γεώργιος</h2>
 		<h3>
 		Τόπος Καταγωγής: Αλεξανδρούπολη <br>
 		Γλώσσες Προγραμματισμού: Java, C++, HTML και Python
 		</h3>
+		<br><br>
 		<p class="aligncenter">
 		<a href="https://buk.gr/el/poli-perioxi/perithori" target="_blank"> <img align="middle" src="Eikones/Perithori.jpg"> </a>
 		<a href="https://en.wikipedia.org/wiki/Alexandroupoli" target="_blank"> <img align="middle" src="Eikones/alexandroupoli.jpg"> </a>
