--- a/Biografiko1.html
+++ b/Biografiko1.html
@@ -15,5 +15,40 @@
 			<li><a target="_blank" href="#">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
+		<br>
+		<h3>
+			Αλέξανδρος Κεσίδης:
+		</h3>
+		<h4>
+		Τόπος και Ημερομηνία Γέννησης:
+		<h5>Αθήνα Χαϊδάρι<br>04 Μαρτίου 1998</h5>
+		</h4><br><h4>
+		Οικογενειακή Κατάσταση:
+		<h5>Ελεύθερος</h5>
+		</h4><br><h4>
+		Επάγγελμα:
+		<h5>Άνεργος - Φοιτητής ΤΕΙ ΑΜΘ</h5>
+		</h4><br><h4>
+		Σπουδές:
+		<h5>Πτυχίο TOEIC Advanced<br>Πτυχίο Επαγγελματικού Λυκείου - Δράμα, Κ. Νευροκόπι<br>Σπουδάζει στο ΤΕΙ Ανατολικής Μακεδονίας και Θράκης - Τμήμα Μηχανικών Πληροφορικής</h5>
+		</h4>
+		
+		<h3>
+			Γεώργιος Γλήνιας:
+		</h3>
+		<h4>
+		Τόπος και Ημερομηνία Γέννησης:
+		<h5>Αλεξανδρούπολη<br>17 Νοεμβρίου 1999</h5>
+		</h4><br><h4>
+		Οικογενειακή Κατάσταση:
+		<h5>Ελεύθερος</h5>
+		</h4><br><h4>
+		Επάγγελμα:
+		<h5>Άνεργος - Φοιτητής ΤΕΙ ΑΜΘ</h5>
+		</h4><br><h4>
+		Σπουδές:
+		<h5>Πτυχίο ESB Lower<br>Πτυχίο Επαγγελματικού Λυκείου - 2ο Επαλ Αλεξανδρούπολης<br>Σπουδάζει στο ΤΕΙ Ανατολικής Μακεδονίας και Θράκης - Τμήμα Μηχανικών Πληροφορικής</h5>
+		</h4>
+		
 	</body>
 </html>
