--- a/Epikoinwnia1.html
+++ b/Epikoinwnia1.html
@@ -7,13 +7,14 @@
 	</head>
 	<body background="Eikones\Eikona1.jpg">
 		<header>
+			<img align="left" src="Eikones/Logo.jpg" alt="Logo" style="width:60px;height:55px;">
 			<h1 align="center">Επικοινωνία</h1>
 		</header>
 		<ul>
-			<li><li1><a target="_blank" class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
-			<li><a target="_blank" href="Project.html">Project</a></li>
-			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
-			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
+			<li><li1><a target="_blank" class="menu" class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
+			<li><a target="_blank" class="menu" href="Project.html">Project</a></li>
+			<li><a target="_blank" class="menu" href="Biografiko1.html">Βιογραφικό</a></li>
+			<li style="float:right"><a target="_blank" class="menu" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
 		<div class="position1">
 		<form action="mailto:alkesid@teiemt.gr"  method="post">
