--- a/Biografiko1.html
+++ b/Biografiko1.html
@@ -7,6 +7,7 @@
 	</head>
 	<body background="Eikones\Eikona1.jpg">
 		<header>
+			<img align="left" src="Eikones/Logo.jpg" alt="Logo" style="width:60px;height:55px;">
 			<h1 align="center">Βιογραφικό</h1>
 		</header>
 		<ul>
