--- a/Project.html
+++ b/Project.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<header>
+			<img align="left"  src="Eikones/Logo.jpg" alt="Logo" style="width:60px;height:55px;">
 			<h1 align="center">Project</h1>
 		</header>
 		<ul>
