--- a/Project.html
+++ b/Project.html
@@ -16,6 +16,12 @@
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
-	
+		<br>
+		<h2>Ολοκληρωμένα Project:</h2>
+		<h3>Η εταιρία K&G έχει ολοκλήρωση μέχρι τώρα διάφορα Project στην γλώσσα προγραμματισμού <a href="https://github.com/Zirus12/Project-Java">Java</a>.</h3>
+		<h2>Project σε Εξέλιξη:</h2>
+		<h3>Τα project με τα οποία ασχολείται η εταιρία μας προς το παρών βρίσκονται <a href="https://github.com/Zirus12/On-going-Projects">εδω</a>.</h3>
+		<h2>Μελλοντικά Project:</h2>
+		<h3>Η εταιρίας μας σκέφτεται να φτιάξει πλατφόρμα εκπαίδευσης, να δημιουργήσει μελλοντικά Project στις γλώσσες προγραμματισμού Java, C++ και ανάπτυξης ιστοσελίδων με Javascript, CSS, HTML και PHP.</h3>
 	</body>
 </html>
