--- a/Arxiki1.html
+++ b/Arxiki1.html
@@ -11,7 +11,7 @@
 			<h1 align="center">Αρχική</h1>
 		</header>
 		<ul>
-			<li><li1><a target="_blank" class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
+			<li><li1><a class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
 			<li><a target="_blank" href="Project.html">Project</a></li>
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
