--- a/Biografiko1.html
+++ b/Biografiko1.html
@@ -13,7 +13,7 @@
 		<ul>
 			<li><li1><a target="_blank" class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
 			<li><a target="_blank" href="Project.html">Project</a></li>
-			<li><a target="_blank" href="#">Βιογραφικό</a></li>
+			<li><a href="#">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
 		<br>
