--- a/Project.html
+++ b/Project.html
@@ -12,7 +12,7 @@
 		</header>
 		<ul>
 			<li><li1><a target="_blank" class="active" class="sure" href="Arxiki1.html">Αρχική</a></li1></li>
-			<li><a target="_blank" href="Project.html">Project</a></li>
+			<li><a href="#">Project</a></li>
 			<li><a target="_blank" href="Biografiko1.html">Βιογραφικό</a></li>
 			<li style="float:right"><a target="_blank" href="Epikoinwnia1.html">Επικοινωνία</a></li>
 		</ul>
